# BigDataBowl2026

./: .gitignore  Hello.py  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
animations/: game_2022091103_play_3126.html  game_2022091103_play_3126_metric.html  game_2022091109_play_767.html  game_2022091109_play_767_metric.html  game_2022091200_play_2479.html  game_2022091200_play_2479_metric.html  game_2022091811_play_2238_animation.html  game_2022091811_play_2238_metric.html
app/: Home.py  app_text.py
app/pages/: 1_Play_Animator.py
dbx/: test_dbx_connect.py
scripts/: test_animation.py
tests/: test_dbx.py
utility/: animations.py  colors.py  dbx.py  test_animation.py  tracebuilders.py  transformations.py
