[project]
name = "bigdatabowl2026"
version = "0.1.0"
description = "Big Data Bowl 2026 Analysis and Modeling"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "polars>=0.20.30",
    "pandas>=2.2.0",
    "matplotlib",
    "plotly",
    "jupyter",
    "scikit-learn",
    "jupyterlab>=4.4.5",
    "pyarrow>=21.0.0",
    "databricks-sql-connector>=4.0.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["utility*"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.4.1",

]

[tool.setuptools.packages.find]
where = ["."]
include = ["utility"]

[tool.isort]
profile = "black"

